--- a/src/main/resources/com/example/proiectoop/scenaLabirint.fxml
+++ b/src/main/resources/com/example/proiectoop/scenaLabirint.fxml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.proiectoop.controller.ScenaLabirintController">
    <center>
-      <Pane fx:id="pane" prefHeight="400.0" prefWidth="400.0" style="-fx-background-color: gray;" BorderPane.alignment="CENTER">
+      <Pane fx:id="pane" onKeyPressed="#onKeyPressed" onMouseClicked="#onMouseClicked" prefHeight="400.0" prefWidth="400.0" style="-fx-background-color: rgb(128,128,128);" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="generateMazeButton" layoutX="518.0" layoutY="51.0" mnemonicParsing="false" onAction="#onGenerateMazeButton" text="Genereaza labinit" />
-            <Button layoutX="518.0" layoutY="93.0" mnemonicParsing="false" text="Rezolva labint" />
-            <Button layoutX="518.0" layoutY="137.0" mnemonicParsing="false" text="Reset" />
+            <Button fx:id="generateMazeButton" layoutX="509.0" layoutY="51.0" mnemonicParsing="false" onAction="#onGenerateMazeButton" text="Genereaza labirint" />
+            <Button fx:id="solveMazeButton" layoutX="509.0" layoutY="93.0" mnemonicParsing="false" onAction="#onSolveMazeButton" text="Rezolva labirint" />
+            <Button fx:id="backButton" layoutX="509.0" layoutY="135.0" mnemonicParsing="false" onAction="#onBackButton" text="Inapoi" />
+            <Label fx:id="currentPositionLabel" layoutX="509.0" layoutY="179.0" style="-fx-background-color: white;" />
          </children></Pane>
    </center>
 </BorderPane>
